<resources>
    <string name="app_name">Spotify Shuffle Radio</string>

    <string name="title_activity_main">Spotify Shuffle Radio</string>
    <string name="title_activity_spotify_login">Spotify Login</string>

    <!-- Spotify login status -->
    <string name="spotify_logged_in">Angemeldet</string>
    <string name="spotify_not_logged_in">Nicht angemeldet</string>
    <string name="spotify_login_failed">Fehler bei der Anmeldung!</string>
    <string name="spotify_not_installed">Nicht installiert</string>
    <string name="spotify_offline">Keine Internetverbindung</string>
    <string name="spotify_status_reload">Aktualisieren</string>
    <string name="spotify_playlists_reload">Aktualisieren</string>

    <!-- Titel -->
    <string name="title_settings">Einstellungen</string>
    <string name="title_playlists">Playlists</string>

    <!-- Einstellungen -->
    <string name="settings_listener_switch">App aktivieren</string>
    <string name="settings_spotify_status">Spotify Status</string>

    <!-- Pfade -->
    <string name="preferences_settings" translatable="false">de.till_s.spotifyshuffleradio.PREFERENCES_SETTINGS</string>
    <string name="preferences_app_state" translatable="false">app_state</string>
    <string name="preferences_active_playlist" translatable="false">active_playlist</string>
    <string name="preferences_playlist_timestamp" translatable="false">playlist_timestamp</string>
    <string name="preferences_last_spotify_login" translatable="false">last_spotify_login</string>
    <string name="preferences_last_spotify_userid" translatable="false">last_spotify_userid</string>
    <string name="preferences_last_spotify_useruri" translatable="false">last_spotify_useruri</string>

    <!-- Toast Errors -->
    <string name="spinner_selected_error">Bitte wähle eine Playlist aus!</string>
    <string name="spinner_selected_saved">Deine Auswahl wurde gespeichert!</string>

    <!-- Ask screen -->
    <string name="ask_title">Spotify Shuffle Radio starten?</string>
    <string name="ask_yes_button">Ja</string>
    <string name="ask_no_button">Nein</string>
    <string name="ask_description">Zum Starten berühren</string>
    <string name="settings_listen_everytime">Vor dem Start fragen</string>
    <string name="preferences_ask_everytime">ask_everytime</string>
    <string name="spotify_player_error">Spotify konnte nicht initialisiert werden!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
