<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.till_s.spotifyshuffleradio.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.047">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textViewTitleSpotifyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_spotify_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textViewSpotifyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/spotify_not_logged_in"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonPlaylistsRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="reloadSpotifyButton"
            android:text="@string/spotify_playlists_reload" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/textViewTitlePlaylists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_playlists"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Spinner
                android:id="@+id/spinnerPlaylists"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/buttonRefreshSpotifyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:onClick="reloadSpotifyPlaylistsButton"
                android:text="@string/spotify_status_reload" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
